PROJECT(libsquash C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
LINK_LIBRARIES(${ZLIB_LIBRARIES})

INCLUDE_DIRECTORIES(src include)
FILE(GLOB SRC_H include/squash.h include/squash/*.h)
FILE(GLOB SRC_SQUASH src/*.c src/*.h)
ADD_LIBRARY(squash ${SRC_H} ${SRC_SQUASH})
